<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">答疑不用等</string>
    <string name="action_settings">Settings</string>
    <string name="tishi1">学号/工号</string>
    <string name="tishi2">密码</string>
    <string name="checkBox1">记住密码</string>
    <string name="button1">登录</string>
    <string name="checkBox2">自动登录</string>
    <string name="tab1">首页</string>
    <string name="tab2">排队</string>
    <string name="tab3">广场</string>
    <string name="tab4">我的</string>
    <string name="name_mine">jungle</string>
    <string name="school_mine">南京航空航天大学</string>
    <string name="spin_prompt01">学院 </string>
    <string name="bt4_mine">邀请好友们 </string>
    <string name="bt5_mine">感兴趣的课程 </string>
    <string name="bt6_mine">设置 </string>

    <string-array name="college">
        <item> 全部 </item>
        <item> 航空宇航学院 </item>
        <item> 能源学院</item>
        <item> 自动化学院 </item>
        <item> 电子信息工程学院 </item>
        <item> 机电学院 </item>
        <item> 材料学院 </item>
        <item> 飞行学院</item>
        <item> 理学院 </item>
        <item> 经济管理学院 </item>
        <item> 人文学院 </item>
        <item> 外语学院 </item>
        <item> 艺术学院 </item>
        <item> 航天宇航学院 </item>
        <item> 计算机科学与技术学院 </item>
        <item> 国际教育学院 </item>
    </string-array>

    <string name="title_activity_third">ThirdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_info">答疑不用等</string>
    <string name="title_activity_forth">ForthActivity</string>

</resources>
